[package]
name = "mesh_simulator"
version = "0.2.0"
authors = ["Marco Caballero <marco.caballero@cl.cam.ac.uk>"]
repository = "https://github.com/Dash83/mesh_simulator.git"
homepage = "https://github.com/Dash83/mesh_simulator.git"
license = "Copyright"
readme = "README.md"
documentation = "https://github.com/Dash83/mesh_simulator"
description = "Simulation platform for a mesh network."

[dependencies]
rand = "0.3.15"
rustc-serialize = "0.3"
serde_derive = "1.0.10"
serde = "1.0.10"
serde_cbor = "0.6"
serde_json = "1.0"
clap = "2.19.0"

#Logging
slog = "2.1.1"
slog-term = "2.3.0"
slog-json = "2.2.0"
slog-stdlog = "3.0.2"
slog-scope = "4.0.1"
slog-async = "2.2.0"
log = "0.4.1"

toml = "0.4.2"
byteorder = "1.0.0"
pnet = "0.21.0"
ipnetwork = "0.12.7"
chrono = "0.4"
socket2 = { version = "0.3.7", features = ["unix"] }
pretty_assertions = "0.5.1"
lazy_static = "1.2.0"
md5 = "0.6.0"
base64 = "0.10.0"
rusqlite = "0.15.0"

[dev-dependencies]
assert_cli = "0.5"
lazy_static = "1.2.0"