[package]
name = "mesh_simulator"
version = "0.2.0"
authors = ["Marco Caballero <marco.caballero@cl.cam.ac.uk>"]
repository = "https://github.com/Dash83/mesh_simulator.git"
homepage = "https://github.com/Dash83/mesh_simulator.git"
license = "Copyright"
readme = "README.md"
documentation = "https://github.com/Dash83/mesh_simulator"
description = "Simulation platform for a mesh network."
edition = "2018"

[dependencies]
rand = "0.6.5"
rustc-serialize = "0.3"
serde_derive = "1.0.10"
serde = "1.0.10"
serde_cbor = "0.6"
serde_json = "1.0"
clap = "2.32.0"
slog = "2.4.1"
slog-term = "2.4.0"
slog-json = "2.3.0"
slog-stdlog = "3.0.2"
slog-async = "2.3.0"
log = "0.4.6"
toml = "0.4.2"
byteorder = "1.0.0"
pnet_datalink = "0.22.0"
ipnetwork = "0.14.0"
socket2 = { version = "0.3.8", features = ["unix"] }
pretty_assertions = "0.6.1"
lazy_static = "1.3.0"
md5 = "0.6.1"
base64 = "0.10.1"
rusqlite = { version = "0.16.0",  features = ["bundled", "functions"] }
threadpool = "1.7.1"
color-backtrace = "0.1.3"
libc = "0.2.55"
sx1276 = { git = "https://github.com/doctorn/sx1276"}
chrono = "0.4.10"
bitflags = "1.1.0"
diesel = { version = "1.4.3", features = ["postgres", "numeric"] }
dotenv = "0.15.0"
strfmt = "0.1.6"
diesel_migrations = "1.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = "0.2.2"

[dev-dependencies]
assert_cli = "0.6.3"
lazy_static = "1.3.0"
